# calculadora

./: .gitignore  CONTEXT.md  README.md  TODO.md  VISION.md
.github/workflows/: release.yml
frontend/: index.html  package.json
frontend/src/: cas.ts  chemistry.ts  converter.ts  engine.ts  grapher.ts  i18n.ts  main.ts  style.css
scripts/: build-appimage.sh
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/engine/: ast.rs  eval.rs  lexer.rs  mod.rs  parser.rs  symbolic.rs
