[package]
name = "calculadora_tauri"
version = "0.1.0"
description = "Calculadora — básica, científica, conversiones, gráficos"
authors = ["javiju"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "calculadora_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-complex = { version = "0.4", features = ["serde"] }
nalgebra = "0.33"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
